--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^8.4.3",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
